--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -15,7 +15,7 @@
 <body>
   <div class="game-container">
     <div class="game-area">
-        <canvas id="gameCanvas" width="600" height="500"></canvas>
+        <canvas id="gameCanvas"></canvas>
     </div>
     
     <div class="info-panel">
