--- a/pages/ApprentissageParRenforcement.html
+++ b/pages/ApprentissageParRenforcement.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Tutorial</title>
-  <link rel="stylesheet" href="/styles/tutorial.css">
+  <link rel="stylesheet" href="/styles/ApprentissageParRenforcement.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
@@ -37,10 +37,10 @@
                 <p>Badges débloqués: 0/5</p>
             </div>
         </div>
-        <button id="nextButton">Suivant</button>
+        <button id="nextButton" onclick="window.location.href='/pages/NextLevel.html'">Suivant</button>
     </div>
   </div>
   
-  <script type="module" src="/scripts/tutorial.js"></script>
+  <script type="module" src="/scripts/ApprentissageParRenforcement.js"></script>
 </body>
 </html>
