--- a/pages/ApprentissageSupervise.html
+++ b/pages/ApprentissageSupervise.html
@@ -20,7 +20,7 @@
     </div>
     
     <div class="info-panel">
-        <h1>AI Adventures</h1>
+        <h1>Ai Adventures</h1>
         
         <div class="score-display">
             Score: <span id="score">0</span>
