add: implement enemy mechanics and update basket structure in game

--- a/pages/ApprentissageSupervise.html
+++ b/pages/ApprentissageSupervise.html
@@ -31,7 +31,12 @@
             <p id="current-task">Utilisez les flèches du clavier pour déplacer DataBot et collecter les machins.</p>
         </div>
         
-        <div id="basket" class="basket"></div>
+        <div id="baskets-container">
+          <div id="circle-basket" class="basket" data-type="circle">Circle Basket</div>
+          <div id="square-basket" class="basket" data-type="square">Square Basket</div>
+          <div id="triangle-basket" class="basket" data-type="triangle">Triangle Basket</div>
+        </div>
+        
         <button>suivant</button>
     </div>
   </div>
