add: enhance gameplay with enemy mechanics, collision detection, and navigation updates

--- a/pages/ApprentissageParRenforcement.html
+++ b/pages/ApprentissageParRenforcement.html
@@ -30,14 +30,7 @@
             <p id="current-task">Utilisez les flèches du clavier pour déplacer DataBot et collecter les machins.</p>
         </div>
         
-        <div class="learning-rewards">
-            <h2>Apprentissage</h2>
-            <p id="learning-concept">Dans ce niveau, vous découvrez l'apprentissage supervisé. Les données sont toujours étiquetées!</p>
-            <div id="rewards">
-                <p>Badges débloqués: 0/5</p>
-            </div>
-        </div>
-        <button id="nextButton" onclick="window.location.href='/pages/NextLevel.html'">Suivant</button>
+        <button id="nextButton">Suivant</button>
     </div>
   </div>
   
