--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -37,8 +37,9 @@
                 <p>Badges débloqués: 0/5</p>
             </div>
         </div>
-        <button id="nextButton">Suivant</button>
-    </div>
+        <a href="ApprentissageParRenforcement.html" style="text-decoration: none;">
+          <button id="nextButton">Suivant</button>
+        </a>    </div>
   </div>
   
   <script type="module" src="/scripts/tutorial.js"></script>
