--- a/pages/ApprentissageParRenforcement.html
+++ b/pages/ApprentissageParRenforcement.html
@@ -30,8 +30,9 @@
             <p id="current-task">Utilisez les flèches du clavier pour déplacer DataBot et collecter les machins.</p>
         </div>
         
-        <button id="nextButton">Suivant</button>
-    </div>
+        <a href="ApprentissageSupervise.html" style="text-decoration: none;">
+          <button id="nextButton" style="display: none;">Suivant</button> <!-- Initially hidden -->
+        </a>        </div>
   </div>
   
   <script type="module" src="/scripts/ApprentissageParRenforcement.js"></script>
