--- a/pages/ApprentissageSupervise.html
+++ b/pages/ApprentissageSupervise.html
@@ -37,7 +37,9 @@
           <div id="triangle-basket" class="basket" data-type="triangle">Triangle Basket</div>
         </div>
         
-        <button>suivant</button>
+        <a href="ApprentissageNonSupervisé.html" style="text-decoration: none;">
+          <button id="nextButton" style="display: none;">Suivant</button>
+        </a>    
     </div>
   </div>
   
