--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -38,8 +38,9 @@
             </div>
         </div>
         <a href="ApprentissageParRenforcement.html" style="text-decoration: none;">
-          <button id="nextButton">Suivant</button>
-        </a>    </div>
+          <button id="nextButton" style="display: none;">Suivant</button>
+        </a>    
+      </div>
   </div>
   
   <script type="module" src="/scripts/tutorial.js"></script>
