refactor: update basket structure and enhance shape collection mechanics

--- a/pages/ApprentissageSupervise.html
+++ b/pages/ApprentissageSupervise.html
@@ -31,10 +31,27 @@
             <p id="current-task">Utilisez les flèches du clavier pour déplacer DataBot et collecter les machins.</p>
         </div>
         
-        <div id="baskets-container">
-          <div id="circle-basket" class="basket" data-type="circle">Circle Basket</div>
-          <div id="square-basket" class="basket" data-type="square">Square Basket</div>
-          <div id="triangle-basket" class="basket" data-type="triangle">Triangle Basket</div>
+        <div class="baskets">
+          <div class="basket" id="circle-basket">
+              <h3>Circle Basket</h3>
+              <div class="slot"></div>
+              <div class="slot"></div>
+          </div>
+          <div class="basket" id="square-basket">
+              <h3>Square Basket</h3>
+              <div class="slot"></div>
+              <div class="slot"></div>
+          </div>
+          <div class="basket" id="triangle-basket">
+              <h3>Triangle Basket</h3>
+              <div class="slot"></div>
+              <div class="slot"></div>
+          </div>
+          <div class="basket" id="star-basket">
+              <h3>Star Basket</h3>
+              <div class="slot"></div>
+              <div class="slot"></div>
+          </div>
         </div>
         
         <button>suivant</button>
