refactor: update navigation button and enhance game win animation

--- a/pages/ApprentissageNonSupervisé.html
+++ b/pages/ApprentissageNonSupervisé.html
@@ -39,12 +39,11 @@
                 <input type="radio" name="sort-type" value="color"> trier par couleur
             </label>
         </div>
-        <div id="baskets" style="display: flex; justify-content: space-around;">
-            <div id="basket-circle" class="basket"></div>
-            <div id="basket-square" class="basket"></div>
-            <div id="basket-triangle" class="basket"></div>
-            <div id="basket-star" class="basket"></div>
+
+        <div class="baskets">
+
         </div>
+
     </div>
   </div>
   
