--- a/pages/ApprentissageSupervise.html
+++ b/pages/ApprentissageSupervise.html
@@ -54,7 +54,7 @@
           </div>
         </div>
         
-        <button>suivant</button>
+        <button id="next-button"><a href="./ApprentissageNonSupervisé.html">Suivant</a></button>
     </div>
   </div>
   
