refactor: update page titles and button styles for consistency and improved user experience

--- a/pages/ApprentissageNonSupervisé.html
+++ b/pages/ApprentissageNonSupervisé.html
@@ -20,7 +20,7 @@
     </div>
     
     <div class="info-panel">
-        <h1>AI Adventures</h1>
+        <h2>Apprentissage Non Supervisé.</h2>
         
         <div class="score-display">
             Score: <span id="score">0</span>
