--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -37,9 +37,9 @@
                 <p>Badges débloqués: 0/5</p>
             </div>
         </div>
-        <a href="ApprentissageParRenforcement.html" style="text-decoration: none;">
-          <button id="nextButton">Suivant</button>
-        </a>    </div>
+        <button id="next-button"><a href="./ApprentissageParRenforcement.html">Suivant</a></button>
+  
+    </div>
   </div>
   
   <script type="module" src="/scripts/tutorial.js"></script>
